# PyonFX

./: .gitignore  .readthedocs.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  readthedocs.yml  requirements.txt  setup.py
.github/scripts/: install-fonts.ps1
.github/workflows/: ci.yml  pyonfx.yml
docs/: Proof algorithm - ms_to_frames.md  index.md  quick start.md
docs/api/: ass_core.md  convert.md  font.md  pixel.md  shape.md  utils.md
docs/reference/: ass_core.md  convert.md  font.md  index.md  pixel.md  shape.md  utils.md
docs/source/: ass utility.rst  conf.py  convert.rst  index.rst  quick start.rst  settings.rst  utils.rst
docs/source/reference/: ass core.rst  ass utility.rst  convert.rst  index.rst  settings.rst  shape.rst  utils.rst
docs/tutorials/: installing.md  structured_objects.md
docs/tutorials/0-first-steps/: 01-explore-ass-values.md  02-hello-world.md  03-time-and-space.md  04-text-segmentation.md
docs/tutorials/1-beginner/: 01-first-kfx.md  02-first-kfx-organized.md  03-romaji-kanji-translation.md
docs/tutorials/2-intermediate/: 01-variations.md  02-shape-effects.md  02-shapes.md
docs/tutorials/3-advanced/: 01-frame-by-frame.md
docs/tutorials/first_steps/: 01_explore_ass_values.md  02_hello_world.md  03_time_and_space.md  04_text_segmentation.md
examples/: First Effect.py
examples/0_first_steps/: 01_explore_ass_values.py  02_hello_world.py  03_time_and_space.py  04_text_segmentation.py
examples/1 - Basics/: 0 - Dump  default ASS values.py  1 - Look into ASS values.py  2 - Create the First Output.py  3 - More lines.py  4 - Organizing the code.py  in.ass
examples/1_beginner/: 01_first_kfx.py  02_first_kfx_organized.py  03_romaji_kanji_sub.py
examples/2 - Beginner/: 1 - First Simple Effect.py  2 - Utilities.py  3 - Something.py  3 - Variants.py  3 - WIP.py  4 - Accelerate Demo.py  5 - Image to Pixels Demo.py  in.ass  in2.ass  timestamps.txt
examples/3 - Advanced/: 1 - WIP.py  2 - Testing Pixels (WIP).py  3 - Morphing.py  in.ass
examples/4 - Community/: 03_time_and_space.py
examples/4 - Community/1 - Dangos/: dango_config.py  in.ass  main.py
examples/ass/: hello_world.ass  romaji_kanji_translation.ass
examples/tutorials/0_first_steps/: 01_explore_ass_values.py  02_hello_world.py  03_time_and_space.py  (+1 more)
pyonfx/: Untitled.ass  Untitled_dummy.ass  __init__.py  ass_core.py  ass_utility.py  convert.py  font.py  font_utility.py  geometry.py  pixel.py  settings.py  shape.py  timestamps.py  utils.py
reference/: index.html
reference/ass_core/: index.html
reference/convert/: index.html
reference/pixel/: index.html
reference/shape/: index.html
reference/utils/: index.html
search/: search_index.json
tests/: test_ass.py  test_convert.py  test_shape.py  test_timestamps.py  test_timestamps_file_parser.py  test_utils.py
tests/Ass/: ass_core.ass  frames_to_ms.ass  in.ass  in_with_spacing.ass  move_ms_to_frame.ass  ms_to_frames.ass  timecodes_identical.txt  timestamps_not_sorted.txt  timestamps_short.txt
tests/shape/: fixtures.py  test_elements.py  test_generation.py  test_operations.py
tests/timestamps/: generate_test_video.py  mkv_timestamps_not_ms.mkv  test_video.avi  test_video.mkv  timestamps.txt  video_without_pts_time.avi
tutorials/installing/: index.html
(+18 files in other folders)
